- 全リソースについて、リクエスト指定ルーティングを使用するように変更

--- a/views/accountTitles/accountTitleSet/index.ejs
+++ b/views/accountTitles/accountTitleSet/index.ejs
@@ -16,7 +16,7 @@ AT-04
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/accountTitles/accountTitleSet/new">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/accountTitles/accountTitleSet/new">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
@@ -73,14 +73,14 @@ AT-04
                             <tbody>
                                 <tr id="templateRow">
                                     <td name="codeValue__codeValue">
-                                        <a target="_blank" href="/accountTitles/accountTitleSet/$codeValue$">
+                                        <a target="_blank" href="/projects/<%= req.project.id %>/accountTitles/accountTitleSet/$codeValue$">
                                             $codeValue$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
                                     <td name="inCodeSet.codeValue__inCodeSet.name|slice">
                                         <a target="_blank"
-                                            href="/accountTitles/accountTitleCategory/$inCodeSet.codeValue$">
+                                            href="/projects/<%= req.project.id %>/accountTitles/accountTitleCategory/$inCodeSet.codeValue$">
                                             $inCodeSet.name$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
