--- a/views/home.ejs
+++ b/views/home.ejs
@@ -71,7 +71,7 @@ HO-01
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="/events/screeningEvent" class="btn btn-sm btn-outline-primary">もっと見る</a>
+                    <a href="/projects/<%= req.project.id %>/events/screeningEvent" class="btn btn-sm btn-outline-primary">もっと見る</a>
                 </div>
             </div>
             <div class="card card-product">
@@ -110,7 +110,7 @@ HO-01
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="/reservations" class="btn btn-sm btn-outline-primary">もっと見る</a>
+                    <a href="/projects/<%= req.project.id %>/reservations" class="btn btn-sm btn-outline-primary">もっと見る</a>
                 </div>
             </div>
         </div>
