--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -149,7 +149,7 @@
                                 </a>
                             </td>
                             <td name="id__identifier__itemOffered.typeOf">
-                                <a target="_blank" href="/offers/$id$/update?itemOffered[typeOf]=$itemOffered.typeOf$">
+                                <a target="_blank" href="/projects/<%= req.project.id %>/offers/$id$/update?itemOffered[typeOf]=$itemOffered.typeOf$">
                                     $identifier$
                                     <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                 </a>
@@ -186,7 +186,7 @@
                                 </a>
                             </td>
                             <td name="id__itemOffered.typeOf">
-                                <a target="_blank" href="/offers/$id$/update?itemOffered[typeOf]=$itemOffered.typeOf$">
+                                <a target="_blank" href="/projects/<%= req.project.id %>/offers/$id$/update?itemOffered[typeOf]=$itemOffered.typeOf$">
                                     <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                 </a>
                             </td>
