--- a/views/sellers/_dataTables.ejs
+++ b/views/sellers/_dataTables.ejs
@@ -62,7 +62,7 @@
                                 </a>
                             </td>
                             <td name="id">
-                                <a target="_blank" href="/sellers/$id$/update">
+                                <a target="_blank" href="/projects/<%= req.project.id %>/sellers/$id$/update">
                                     <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                 </a>
                             </td>
