--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -16,7 +16,7 @@ Aa-10
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/creativeWorks/movie/add">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/creativeWorks/movie/add">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
@@ -130,7 +130,7 @@ Aa-10
                                         </div>
                                     </td>
                                     <td name="id__identifier">
-                                        <a target="_blank" href="/creativeWorks/movie/$id$/update">
+                                        <a target="_blank" href="/projects/<%= req.project.id %>/creativeWorks/movie/$id$/update">
                                             $identifier$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
@@ -151,7 +151,7 @@ Aa-10
                                         </a>
                                     </td>
                                     <td name="id">
-                                        <a target="_blank" href="/creativeWorks/movie/$id$/update">
+                                        <a target="_blank" href="/projects/<%= req.project.id %>/creativeWorks/movie/$id$/update">
                                             <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                         </a>
                                     </td>
