--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -69,7 +69,7 @@
                     <tbody>
                         <tr id="templateRow" _id="$id$">
                             <td name="id__identifier">
-                                <a target="_blank" href="/offerCatalogs/$id$/update">
+                                <a target="_blank" href="/projects/<%= req.project.id %>/offerCatalogs/$id$/update">
                                     $identifier$
                                     <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                 </a>
@@ -89,7 +89,7 @@
                                 </a>
                             </td>
                             <td name="id">
-                                <a target="_blank" href="/offerCatalogs/$id$/update">
+                                <a target="_blank" href="/projects/<%= req.project.id %>/offerCatalogs/$id$/update">
                                     <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                 </a>
                             </td>
