--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -17,7 +17,7 @@ OC-01
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/offerCatalogs/add">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/offerCatalogs/add">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
