--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -16,7 +16,7 @@ MT-01
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/places/movieTheater/new">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/places/movieTheater/new">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
@@ -77,7 +77,7 @@ MT-01
                             <tbody>
                                 <tr id="templateRow" identifier="">
                                     <td name="id__branchCode">
-                                        <a target="_blank" href="/places/movieTheater/$id$/update">
+                                        <a target="_blank" href="/projects/<%= req.project.id %>/places/movieTheater/$id$/update">
                                             $branchCode$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
