--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -16,7 +16,7 @@ ST-01
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/places/seat/new">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/places/seat/new">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
@@ -109,7 +109,7 @@ ST-01
                                     <td
                                         name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.branchCode__containedInPlace.branchCode__branchCode__branchCode">
                                         <a target="_blank"
-                                            href="/places/seat/$containedInPlace.containedInPlace.containedInPlace.branchCode$:$containedInPlace.containedInPlace.branchCode$:$containedInPlace.branchCode$:$branchCode$/update">
+                                            href="/projects/<%= req.project.id %>/places/seat/$containedInPlace.containedInPlace.containedInPlace.branchCode$:$containedInPlace.containedInPlace.branchCode$:$containedInPlace.branchCode$:$branchCode$/update">
                                             $branchCode$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
