--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -16,7 +16,7 @@ PR-00
     <div class="card-body search searchProducts">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/products/new?typeOf=<%= req.query.typeOf %>">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/products/new?typeOf=<%= req.query.typeOf %>">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
