--- a/views/sellers/index.ejs
+++ b/views/sellers/index.ejs
@@ -16,7 +16,7 @@ SE-01
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
-            <a class="btn btn-primary" href="/sellers/new">
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/sellers/new">
                 <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary search btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
