- 全リソースについて、リクエスト指定ルーティングを使用するように変更

--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -97,7 +97,7 @@
                                     <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
                                 </div>
 
-                                <% if (req.subscription.settings.useSeats) { %>
+                                <% if (subscription.settings.useSeats) { %>
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static">座席有無
                                     </label>
