--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -132,7 +132,7 @@
                                 <div class="form-group bmd-form-group col-md-3">
                                 </div>
 
-                                <% if (req.subscription.settings.useSeats) { %>
+                                <% if (subscription.settings.useSeats) { %>
                                 <div class="form-group bmd-form-group col-md-6">
                                     <label class="bmd-label-static">座席有無</label>
                                     <div class="form-check form-check-inline">
