- PROJECT_ID設定を削除

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -147,7 +147,7 @@ HO-01
                 </div>
             </div>
 
-            <div class="card card-product">
+            <!-- <div class="card card-product">
                 <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">payment</i>
@@ -164,7 +164,7 @@ HO-01
                         <dd class="col-md-8 text-right"><span class="reservationFor"></span></dd>
                     </dl>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
