- jsファイル構成変更

--- a/views/categoryCodes/new.ejs
+++ b/views/categoryCodes/new.ejs
@@ -5,7 +5,7 @@ CC-01
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/categoryCodes/form.js"></script>
+<script src="/js/categoryCodes/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post">
