--- a/views/offerCatalogs/update.ejs
+++ b/views/offerCatalogs/update.ejs
@@ -6,7 +6,7 @@ OC-02
 <link rel="stylesheet" href="/css/ticketTypeGroupAddEdit.css">
 <%- contentFor('scripts') %>
 <script src="/js/jquery-ui.js"></script>
-<script src="/js/master/offerCatalogs/form.js"></script>
+<script src="/js/offerCatalogs/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post" id="ticketTypeGroupsForm">
