--- a/views/offers/add.ejs
+++ b/views/offers/add.ejs
@@ -7,7 +7,7 @@ OF-00
 <%- contentFor('scripts') %>
 <script src="/js/tinycolor-min.js"></script>
 <script src="/js/bootstrap.colorpickersliders.js"></script>
-<script src="/js/master/offers/form.js"></script>
+<script src="/js/offers/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post">
