--- a/views/places/seat/new.ejs
+++ b/views/places/seat/new.ejs
@@ -5,7 +5,7 @@ ST-00
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/places/seat.js"></script>
+<script src="/js/places/seat.js"></script>
 <%- contentFor('body') %>
 <form method="post">
     <%- include('../../common/messages') %>
