--- a/views/sellers/new.ejs
+++ b/views/sellers/new.ejs
@@ -7,7 +7,7 @@ SE-00
 <%- contentFor('scripts') %>
 <script src="/js/tinycolor-min.js"></script>
 <script src="/js/bootstrap.colorpickersliders.js"></script>
-<script src="/js/master/sellers/form.js"></script>
+<script src="/js/sellers/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post">
