--- a/views/accountTitles/edit.ejs
+++ b/views/accountTitles/edit.ejs
@@ -5,7 +5,7 @@ AT-02
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/accountTitles/form.js"></script>
+<script src="/js/accountTitles/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post">
