--- a/views/actions/index.ejs
+++ b/views/actions/index.ejs
@@ -6,8 +6,8 @@ AC-01
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
 <script src="/js/actions/index.js"></script>
 
 <%- contentFor('body') %>
