--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -6,9 +6,9 @@ Aa-10
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/creativeWorks/movieList.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
+<script src="/js/creativeWorks/movieList.js"></script>
 
 <%- contentFor('body') %>
 
