--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -8,9 +8,9 @@ Aa-4
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="/js/lodash.debounce.min.js"></script>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/events/screeningEvent.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
+<script src="/js/events/screeningEvent.js"></script>
 
 <%- contentFor('body') %>
 
