--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -67,7 +67,7 @@
     <!-- json editor -->
     <script src="/node_modules/@json-editor/json-editor/dist/jsoneditor.min.js"></script>
 
-    <script src="/js/master/common.js"></script>
+    <script src="/js/common.js"></script>
 
     <%- defineContent('scripts') %>
 </head>
