--- a/views/offerCatalogs/index.ejs
+++ b/views/offerCatalogs/index.ejs
@@ -6,9 +6,9 @@ OC-01
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/offerCatalogs/index.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
+<script src="/js/offerCatalogs/index.js"></script>
 <%- contentFor('body') %>
 
 <% /* フォーム */ %>
