--- a/views/offers/index.ejs
+++ b/views/offers/index.ejs
@@ -6,9 +6,9 @@ OF-01
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/offers/index.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
+<script src="/js/offers/index.js"></script>
 <%- contentFor('body') %>
 <% /* フォーム */ %>
 
