--- a/views/places/movieTheater/update.ejs
+++ b/views/places/movieTheater/update.ejs
@@ -5,7 +5,7 @@ MT-02
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/places/movieTheater.js"></script>
+<script src="/js/places/movieTheater.js"></script>
 <%- contentFor('body') %>
 <form method="post">
     <%- include('../../common/messages') %>
