--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -6,9 +6,9 @@ SR-01
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/places/screeningRooms.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
+<script src="/js/places/screeningRooms.js"></script>
 
 <%- contentFor('body') %>
 
