--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -6,9 +6,9 @@ PS-02
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
 <script src="/js/jquery.simplePagination.js"></script>
-<script src="/js/master/commonMaster.js"></script>
-<script src="/js/master/commonMasterList.js"></script>
-<script src="/js/master/priceSpecification/index.js"></script>
+<script src="/js/commonMaster.js"></script>
+<script src="/js/commonMasterList.js"></script>
+<script src="/js/priceSpecification/index.js"></script>
 
 <%- contentFor('body') %>
 
