--- a/views/products/update.ejs
+++ b/views/products/update.ejs
@@ -5,7 +5,7 @@ PR-01
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/products/form.js"></script>
+<script src="/js/products/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post">
