--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -7,7 +7,7 @@ OF-3
 <%- contentFor('scripts') %>
 <script src="/js/tinycolor-min.js"></script>
 <script src="/js/bootstrap.colorpickersliders.js"></script>
-<script src="/js/master/ticketTypes/form.js"></script>
+<script src="/js/ticketTypes/form.js"></script>
 
 <%- contentFor('body') %>
 <form method="post">
