- 区分分類選択肢を動的に変更

--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -31,20 +31,19 @@
                             区分分類<span class="text-danger">＊</span>
                         </label>
                         <% if (!isNew) { %>
-                        <input type="hidden" name="inCodeSet[identifier]" value="<%= forms.inCodeSet.identifier %>">
+                        <input type="hidden" name="inCodeSet" value="<%= JSON.stringify(forms.inCodeSet) %>">
                         <% } %>
-                        <select class="form-control" name="inCodeSet[identifier]" <% if (!isNew) { %> disabled<% } %>>
-                            <option value="">選択してください</option>
-                            <% categoryCodeSets.forEach((categoryCodeSet) => { %>
-                            <option value="<%= categoryCodeSet.identifier %>" <% if (forms.inCodeSet !== undefined
-                            && forms.inCodeSet.identifier === categoryCodeSet.identifier) { %> selected<% } %>>
-                                <%= categoryCodeSet.name %>
-                            </option>
-                            <% }) %>
+                        <select class="form-control" name="inCodeSet" id="inCodeSet" style="width: 100%;"
+                            <% if (!isNew) { %> disabled <% } %>>
+                            <% if (forms.inCodeSet !== undefined) { %>
+                            <option value="<%= JSON.stringify(forms.inCodeSet) %>" selected="selected">
+                                <%= forms.inCodeSet.name %></option>
+                            <% } %>
                         </select>
-                        <% if (errors && errors['inCodeSet.identifier']) { %>
+
+                        <% if (errors && errors['inCodeSet']) { %>
                         <span class="bmd-help text-danger d-block">
-                            <%- errors['inCodeSet.identifier'].msg %>
+                            <%- errors['inCodeSet'].msg %>
                         </span>
                         <% } %>
                     </div>
