--- a/views/paymentServices/_provider.ejs
+++ b/views/paymentServices/_provider.ejs
@@ -43,6 +43,18 @@
     </div>
 
     <div class="form-group bmd-form-group col-2">
+        <label class="bmd-label-floating">トークン認証コード</label>
+        <input class="form-control" name="provider[<%= key %>][credentials][tokenizationCode]"
+            id="provider[<%= key %>][credentials][tokenizationCode]" maxlength=64
+            value="<%= (provider.credentials !== undefined) ? provider.credentials.tokenizationCode : '' %>">
+        <% if (errors && errors[`provider[${key}].credentials.tokenizationCode`]) { %>
+        <span class="bmd-help text-danger d-block">
+            <%- errors[`provider[${key}].credentials.tokenizationCode`].msg %>
+        </span>
+        <% } %>
+    </div>
+
+    <div class="form-group bmd-form-group col-2">
         <label class="bmd-label-floating">ムビチケ興行会社コード</label>
         <input class="form-control" name="provider[<%= key %>][credentials][kgygishCd]"
             id="provider[<%= key %>][credentials][kgygishCd]" maxlength=64
