- 区分編集に英語名称を追加

--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -82,6 +82,21 @@
                         </span>
                         <% } %>
                     </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="name[en]" class="bmd-label-static">
+                            英語名称
+                        </label>
+                        <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder=""
+                            maxlength=30
+                            value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
+                        <span class="bmd-help">30文字以内でご入力ください</span>
+                        <% if (errors && errors['name.en']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['name.en'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
                 </div>
 
                 <div class="form-row">
