- update @chevre/api-nodejs-client

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -53,7 +53,7 @@
         <li class="nav-item <%= (displayId === 'Aa-10') ? 'active': ''; %>">
             <a class="nav-link" href="/projects/<%= req.project.id %>/creativeWorks/movie">
                 <i class="material-icons">movie</i>
-                <p>コンテンツ(作品)</p>
+                <p>コンテンツ</p>
             </a>
         </li>
 
@@ -131,7 +131,7 @@
                     <li class="nav-item <%= (displayId === 'OC-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/projects/<%= req.project.id %>/offerCatalogs">
                             <span class="sidebar-mini"><i class="material-icons">local_offer</i></span>
-                            <span class="sidebar-normal">カタログ(券種グループ)</span>
+                            <span class="sidebar-normal">カタログ</span>
                         </a>
                     </li>
                 </ul>
