- 文言統一調整

--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -129,12 +129,7 @@ Aa-10
                                             </a>
                                         </div>
                                     </td>
-                                    <td name="id__identifier">
-                                        <a target="_blank" href="/projects/<%= req.project.id %>/creativeWorks/movie/$id$/update">
-                                            $identifier$
-                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                        </a>
-                                    </td>
+                                    <td name="id__identifier">$identifier$</td>
                                     <td name="name|slice">$name$</td>
                                     <td name="headline|slice:10">$headline$</td>
                                     <td name="duration|duration:minute">$duration$</td>
