--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -68,12 +68,7 @@
                     </thead>
                     <tbody>
                         <tr id="templateRow" _id="$id$">
-                            <td name="id__identifier">
-                                <a target="_blank" href="/projects/<%= req.project.id %>/offerCatalogs/$id$/update">
-                                    $identifier$
-                                    <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                </a>
-                            </td>
+                            <td name="id__identifier">$identifier$</td>
                             <td name="name.ja|slice">$name.ja$</td>
                             <td name="offerCount__id">
                                 <a href="javascript:void(0)" class="popupListTicketType" data-id="$id$">
