--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -148,12 +148,7 @@
                                     <i class="material-icons" style="font-size: 1.2em; color:$color$">color_lens</i>
                                 </a>
                             </td>
-                            <td name="id__identifier__itemOffered.typeOf">
-                                <a target="_blank" href="/projects/<%= req.project.id %>/offers/$id$/update?itemOffered[typeOf]=$itemOffered.typeOf$">
-                                    $identifier$
-                                    <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                </a>
-                            </td>
+                            <td name="id__identifier__itemOffered.typeOf">$identifier$</td>
                             <td name="itemOfferedName">$itemOfferedName$</td>
                             <td name="alternateName.ja|slice">$alternateName.ja$</td>
                             <td name="priceStr">$priceStr$</td>
