--- a/views/places/screeningRoom/form.ejs
+++ b/views/places/screeningRoom/form.ejs
@@ -85,7 +85,7 @@
 
                 <div class="form-group">
                     <label for="name[en]" class="bmd-label-static">
-                        名称(English)
+                        英語名称
                     </label>
                     <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
                         value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
@@ -113,7 +113,7 @@
 
                 <div class="form-group">
                     <label for="address[en]" class="bmd-label-static">
-                        アドレス(English)
+                        英語アドレス
                     </label>
                     <input class="form-control" name="address[en]" id="naaddressme[en]" placeholder="" maxlength=64
                         value="<%= (forms.address !== undefined && forms.address !== null) ? forms.address.en : '' %>">
