--- a/views/places/screeningRoomSection/form.ejs
+++ b/views/places/screeningRoomSection/form.ejs
@@ -115,7 +115,7 @@
 
                 <div class="form-group">
                     <label for="name[en]" class="bmd-label-static">
-                        名称(English)
+                        英語名称
                     </label>
                     <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
                         value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
