--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -125,7 +125,7 @@
 
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="name[en]" class="bmd-label-static">
-                            名称(English)
+                            英語名称
                         </label>
                         <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
                             value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
