--- a/views/sellers/form.ejs
+++ b/views/sellers/form.ejs
@@ -68,7 +68,7 @@
 
                     <div class="form-group bmd-form-group col-md-6">
                         <label for="name[en]" class="bmd-label-static">
-                            名称(英)<span class="text-danger">＊</span>
+                            英語名称<span class="text-danger">＊</span>
                         </label>
                         <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder=""
                             maxlength=64 value="<%=forms.name.en %>">
