--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -102,12 +102,7 @@ Aa-3
                             </thead>
                             <tbody>
                                 <tr id="templateRow" eventId="$id$">
-                                    <td name="id__id">
-                                        <a target="_blank" href="/projects/<%= req.project.id %>/events/screeningEventSeries/$id$/update">
-                                            $id$
-                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                        </a>
-                                    </td>
+                                    <td name="id__id">$id$</td>
                                     <td name="location.id__location.name.ja|slice">
                                         <a target="_blank"
                                             href="/projects/<%= req.project.id %>/places/movieTheater/$location.id$/update">$location.name.ja$
